# asteroids_clone

./: Cargo.toml
assets/sprites/: sheet1-edges.json
src/: components.rs  main.rs  states.rs  systems.rs
src/damage/: lib.rs  mod.rs
src/game/: mod.rs  states.rs  systems.rs
src/game/damage/: lib.rs
src/game/meteors/: components.rs  mod.rs  systems.rs
src/game/planets/: components.rs  mod.rs  systems.rs
src/game/player/: components.rs  mod.rs  systems.rs
src/game/shots/: components.rs  mod.rs  systems.rs
src/game/util/: mod.rs
src/game/world/: components.rs  mod.rs  resources.rs  systems.rs
src/game_over_menu/: components.rs  mod.rs  styles.rs
src/game_over_menu/systems/: interactions.rs  layout.rs
src/mainmenu/: mod.rs  styles.rs
src/mainmenu/systems/: interactions.rs  layout.rs
src/meteors/: components.rs  mod.rs  resources.rs  systems.rs
src/planets/: components.rs  mod.rs  systems.rs
src/player/: components.rs  mod.rs  systems.rs
src/shots/: components.rs  mod.rs  systems.rs
src/sprite_loader/: mapper.rs
src/world/: components.rs  mod.rs  systems.rs
