[package]
name = "asteroid_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy="0.12.1"
serde = "1.0.2"
serde-xml-rs = "0.6.0"
serde_json = "1.0.111"
image = { version = "0.24.1", features = [] }
rand = "0.8.5"
bevy_xpbd_2d = "0.3"
